--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="EmpowermentForMen"
+      name="Women Empower"
       content="Support this movement to empower the men society"
     />
-    <title>MenEmpower</title>
+    <title>WomenEmpower</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
